--- a/conf/Optimization_config_file.yml
+++ b/conf/Optimization_config_file.yml
@@ -100,11 +100,11 @@ algorithms:
     embedding: [30, 50, 70, 100, 120]
     l2: [0.0001, 0.00001]
   key: CM_HGCN
-#- class: COTREC.COTREC.COTREC
-# params: { epoch: 30 }
-#  params_opt:
-#    lr: [{from: 0.01, to: 0.001, in: 10, type: float32},{from: 0.001, to: 0.0001, in: 10, type: float32}]
-#    batch_size: [20, 50, 100]
-#    embedding: [20, 50, 100]
- #   l2: [0.0001, 0.00001]
-#  key: COTREC
+- class: COTREC.COTREC.COTRECModel
+ params: { epoch: 30 }
+ params_opt:
+   lr: [{from: 0.01, to: 0.001, in: 10, type: float32},{from: 0.001, to: 0.0001, in: 10, type: float32}]
+   batch_size: [20, 50, 100]
+   embedding: [20, 50, 100]
+   l2: [0.0001, 0.00001]
+ key: COTREC
